# pronunciation-dictionary-utils

./: CHANGELOG.md  CITATION.cff  LICENSE  Pipfile  README.md  pyproject.toml
src/pronunciation_dictionary_utils/: __init__.py  common.py  deserialization.py  io.py  merging.py  phoneme_set_extraction.py  pronunciation_selection.py  pronunciations_map_symbols.py  pronunciations_map_symbols_dict.py  pronunciations_remove_symbols.py  pronunciations_replace_pronunciation.py  pronunciations_sorting.py  serialization.py  single_pronunciation_selection.py  subset_extraction.py  validation.py  vocabulary_extraction.py  vocabulary_remove_symbols.py  weights_normalization.py  words_casing_adjustment.py  words_remove_symbols.py  words_sorting.py
src/pronunciation_dictionary_utils_cli/: argparse_helper.py  cli.py  formatting_adjustment.py  globals.py  io.py  logging_configuration.py  merging.py  phoneme_set_extraction.py  pronunciations_map_symbols.py  pronunciations_map_symbols_json.py  pronunciations_map_symbols_json_src.py  pronunciations_remove_symbols.py  pronunciations_sorting.py  single_pronunciation_selection.py  subset_extraction.py  vocabulary_extraction.py  vocabulary_remove_symbols.py  weights_normalization.py  words_casing_adjustment.py  words_remove_symbols.py  words_sorting.py
src/pronunciation_dictionary_utils_tests/: test_api.py
src/pronunciation_dictionary_utils_tests/test_common_py/: test_merge_pronunciations.py
src/pronunciation_dictionary_utils_tests/test_map_symbols/: test_process_map_pronunciation_full.py  test_process_map_pronunciation_partial.py
src/pronunciation_dictionary_utils_tests/test_pronunciations_map_symbols_dict_py/: test_apply_mapping_full.py  test_apply_mapping_partial.py  test_get_mappable_symbols.py  test_get_unmappable_symbols.py  test_identify_and_apply_mappings_full.py  test_identify_and_apply_mappings_partial.py
src/pronunciation_dictionary_utils_tests/test_pronunciations_map_symbols_json_py/: test_apply_mapping_full.py  test_apply_mapping_partial.py  test_apply_mappings_full.py  test_apply_mappings_partial.py  test_get_mappable_and_unmappable_symbols.py  test_get_mappable_symbols.py  test_get_unmappable_symbols.py  test_identify_and_apply_mappings_full.py  test_identify_and_apply_mappings_partial.py
src/pronunciation_dictionary_utils_tests/test_pronunciations_map_symbols_py/: test_dict1.dict  test_get_mappable_and_unmappable_symbols.py  test_map1.json  test_process_map_pronunciations_full.py  test_process_map_pronunciations_json.py  test_process_map_pronunciations_json_full.py  test_process_map_pronunciations_json_partial.py  test_process_map_pronunciations_json_retired.py  test_process_map_pronunciations_partial.py
src/pronunciation_dictionary_utils_tests/test_pronunciations_remove_symbols_py/: test_remove_symbols_all.py  test_remove_symbols_both.py  test_remove_symbols_end.py  test_remove_symbols_from_pronunciations_entry.py  test_remove_symbols_start.py
src/pronunciation_dictionary_utils_tests/test_pronunciations_replace_symbols_py/: test_replace_symbols_from_pronunciations_entry.py
src/pronunciation_dictionary_utils_tests/test_pronunciations_sorting_py/: test_sort_pronunciations_entry.py
src/pronunciation_dictionary_utils_tests/test_words_sorting_py/: test_sort_words.py
